deploy/aks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-sentry
  labels:
    name: ai-sentry
