deploy/aks/ai-sentry-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: facadeapp
  labels:
    app: facadeapp
spec:
  ports:
    - name: http
      port: 80
      targetPort: facadeapp-http
  type: LoadBalancer
  selector:
    app: facadeapp

---
apiVersion: v1
kind: Service
metadata:
  name: facadeapp-headless
  labels:
    app: facadeapp-headless
spec:
  clusterIP: None
  selector:
    app: facadeapp
  ports:
    - name: http
      port: 80
      targetPort: facadeapp-http
---
# Ingress:

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facadeapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: facadeapp
            port:
              number: 80
---

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: facadeapp
spec:
  serviceName: facadeapp
  replicas: 1
  selector:
    matchLabels:
      app: facadeapp
  template:
    metadata:
      labels:
        app: facadeapp
        azure.workload.identity/use: "true"
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "facadeapp"
        dapr.io/app-port: "5000"
        dapr.io/log-as-json: "true"
        dapr.io/app-protocol: "http"
        dapr.io/enable-app-health-check: "true"
        dapr.io/app-health-check-path: "/dapr/health"
        dapr.io/app-health-probe-interval: "3"
        dapr.io/app-health-probe-timeout: "200"
        dapr.io/app-health-threshold: "2"
        azure.workload.identity/inject-proxy-sidecar: "true"
        azure.workload.identity/proxy-sidecar-port: "8000"

    spec:
      containers:
        - name: sentryai-facade
          image: youracr.azurecr.io/ai-sentry-facadeapp:0.1.1
          imagePullPolicy: Always
          ports:
            - name: facadeapp-http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /liveness
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 3
---
#CosmosDB Logger
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: cosmosdbloggerw
spec:
  serviceName: cosmosdblogger
  replicas: 2
  selector:
    matchLabels:
      app: cosmosdbloggerw
  template:
    metadata:
      labels:
        app: cosmosdbloggerw
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "cosmosdbloggerw"
        dapr.io/app-port: "7000"
        dapr.io/log-as-json: "true"
        #dapr.io/app-protocol: "http"
        #dapr.io/enable-app-health-check: "true"
        #dapr.io/app-health-check-path: "/dapr/health"
        #dapr.io/app-health-probe-interval: "3"
        #dapr.io/app-health-probe-timeout: "200"
        #dapr.io/app-health-threshold: "2"

    spec:
      containers:
        - name: sentry-ai-cosmosdblogger
          image: youracr.azurecr.io/ai-sentry-cosmosdblogger:0.1.1
          imagePullPolicy: Always
          ports:
            - name: cosmoslogger
              containerPort: 7000
              protocol: TCP
---
#Summary Logger Logger
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: cosmosdb-summary-loggerw
spec:
  serviceName: cosmosdb-summary-loggerw
  replicas: 2
  selector:
    matchLabels:
      app: cosmosdb-summary-loggerw
  template:
    metadata:
      labels:
        app: cosmosdb-summary-loggerw
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "cosmosdb-summary-loggerw"
        dapr.io/app-port: "7001"
        dapr.io/log-as-json: "true"
        #dapr.io/app-protocol: "http"
        #dapr.io/enable-app-health-check: "true"
        #dapr.io/app-health-check-path: "/dapr/health"
        #dapr.io/app-health-probe-interval: "3"
        #dapr.io/app-health-probe-timeout: "200"
        #dapr.io/app-health-threshold: "2"

    spec:
      containers:
        - name: sentry-ai-summary-logger
          image: youracr.azurecr.io/ai-sentry-summary-logger:0.1.1
          imagePullPolicy: Always
          ports:
            - name: summarylogger
              containerPort: 7001
              protocol: TCP
---
# IF you want to use Event hub as pub sub layer uncomment and fill in below

# apiVersion: dapr.io/v1alpha1
# kind: Component
# metadata:
#   name: openaipubsub
# spec:
#   type: pubsub.azure.eventhubs
#   version: v1
#   metadata:
#     # Either connectionString or eventHubNamespace is required
#     # Use connectionString when *not* using Microsoft Entra ID
#     - name: connectionString
#       value: "<your-eh-connection-string>"
#     # Use eventHubNamespace when using Microsoft Entra ID
#     # - name: eventHubNamespace
#     #   value: "namespace"
#     - name: consumerID # Optional. If not supplied, the runtime will create one.
#       value: "ai-sentry-logger"
#     - name: enableEntityManagement
#       value: "false"
#     # The following four properties are needed only if enableEntityManagement is set to true
#     # - name: resourceGroupName
#     #   value: "test-rg"
#     # - name: subscriptionID
#     #   value: "value of Azure subscription ID"
#     # - name: partitionCount
#     #   value: "1"
#     # - name: messageRetentionInDays
#     #   value: "3"
#     # Checkpoint store attributes
#     - name: storageAccountName
#       value: "<your-storage-account-name>"
#     - name: storageAccountKey
#       value: "<your-storage-account-key>"
#     - name: storageContainerName
#       value: "ai-sen-checkpoints"
#     # Alternative to passing storageAccountKey
#     # - name: storageConnectionString
#     #   value: "DefaultEndpointsProtocol=https;AccountName=<account>;AccountKey=<account-key>"
